WIP Adding Front/Back/Center to Peformers & Movies

--- a/ui/v2.5/src/locales/en-GB.json
+++ b/ui/v2.5/src/locales/en-GB.json
@@ -22,6 +22,7 @@
     "clean_generated": "Clean generated files",
     "clear": "Clear",
     "clear_back_image": "Clear back image",
+    "clear_center_image": "Clear center image",
     "clear_date_data": "Clear date data",
     "clear_front_image": "Clear front image",
     "clear_image": "Clear Image",
@@ -119,6 +120,7 @@
     "selective_scan": "Selective Scan",
     "set_as_default": "Set as default",
     "set_back_image": "Back image…",
+    "set_center_image": "Center image…",
     "set_cover": "Set as Cover",
     "set_front_image": "Front image…",
     "set_image": "Set image…",
